--- a/index.html
+++ b/index.html
@@ -550,3 +550,115 @@
             </button>
           </div>
         `;
+      }
+
+      outputDiv.innerHTML = html;
+    }
+
+    // 정답 버튼 클릭 시
+    function showActivityAnswers() {
+      renderActivity(true);
+    }
+
+    window.handleImageUpload = handleImageUpload;
+    window.generateQuestion = generateQuestion;
+    window.showAnswersAndExplanations = showAnswersAndExplanations;
+    window.showKoreanTranslation = showKoreanTranslation;
+    window.printPage = printPage;
+    window.generateActivity = generateActivity;
+    window.showActivityAnswers = showActivityAnswers;
+    window.renderActivity = renderActivity;
+  </script>
+</head>
+<body>
+  <div class="container">
+    <h1>영어 독해 문제 생성기</h1>
+    <div class="tabs">
+      <button onclick="showSection('upload')"><i class="fas fa-upload"></i> 지문 업로드</button>
+      <button onclick="showSection('generate')"><i class="fas fa-cogs"></i> 문제 생성</button>
+      <button onclick="showSection('check')"><i class="far fa-eye"></i> 문제 확인</button>
+      <button onclick="showSection('activity')"><i class="fas fa-chalkboard-teacher"></i> 활동 생성</button>
+      <button onclick="showSection('activityCheck')"><i class="fas fa-check-square"></i> 활동 확인</button>
+    </div>
+
+    <!-- 지문 업로드 섹션 -->
+    <div id="upload" class="section">
+      <h2><i class="fas fa-file-alt"></i> 지문 업로드</h2>
+      <textarea id="passage" placeholder="지문을 입력하세요..." rows="6"></textarea>
+      <input type="file" id="imageInput" accept="image/*">
+      <button onclick="handleImageUpload()"><i class="fas fa-camera"></i> 이미지에서 텍스트 추출</button>
+      <button onclick="showSection('generate')"><i class="fas fa-arrow-right"></i> 입력 완료</button>
+    </div>
+    
+    <!-- 문제 생성 섹션 -->
+    <div id="generate" class="section" style="display:none;">
+      <h2><i class="fas fa-cogs"></i> 문제 생성</h2>
+      <h3>문제 유형 선택</h3>
+      <div style="margin-bottom: 10px;">
+        <label><input type="checkbox" class="problem-type" value="주제 및 목적 파악" /> 주제 및 목적 파악</label>
+        <label><input type="checkbox" class="problem-type" value="세부 내용 이해" /> 세부 내용 이해</label>
+        <label><input type="checkbox" class="problem-type" value="논리적 관계 파악" /> 논리적 관계 파악</label>
+        <label><input type="checkbox" class="problem-type" value="어휘 추론" /> 어휘 추론</label>
+        <label><input type="checkbox" class="problem-type" value="빈칸 추론" /> 빈칸 추론</label>
+        <label><input type="checkbox" class="problem-type" value="글의 순서 파악" /> 글의 순서 파악</label>
+        <label><input type="checkbox" class="problem-type" value="어법" /> 어법</label>
+      </div>
+      <div style="margin-bottom: 10px;">
+        <h3>문항 수 선택</h3>
+        <label>
+          전체 문항 수:
+          <input type="number" id="totalQuestions" value="1" min="1" style="width:60px;">
+        </label>
+      </div>
+      <button onclick="generateQuestion()"><i class="fas fa-check"></i> 선택 완료</button>
+      <div id="loading-indicator">문제 생성 중... <i class="fas fa-hourglass-half"></i></div>
+    </div>
+    
+    <!-- 문제 확인 섹션 -->
+    <div id="check" class="section" style="display:none;">
+      <h2><i class="far fa-eye"></i> 문제 확인</h2>
+      <div id="pdf-content">
+        <form id="question-form">
+          <!-- 동적으로 생성된 문제들 표시 (generateQuestion) -->
+        </form>
+      </div>
+      <div style="margin-top:20px;">
+        <button type="button" onclick="showAnswersAndExplanations()"><i class="fas fa-info-circle"></i> 정답 및 해설</button>
+        <button type="button" onclick="showKoreanTranslation()"><i class="fas fa-language"></i> 국문 해석</button>
+      </div>
+      <div id="answer-section" style="margin-top: 20px; display: none;">
+        <h3>정답 및 해설</h3>
+        <pre id="answers"></pre>
+        <pre id="explanations"></pre>
+        <button onclick="printPage()" style="margin-top:10px;"><i class="fas fa-print"></i> 웹 페이지 인쇄</button>
+      </div>
+      <div id="korean-section" style="margin-top: 20px; display: none;">
+        <h3>국문 해석</h3>
+        <pre id="korean-translation"></pre>
+        <button onclick="printPage()" style="margin-top:10px;"><i class="fas fa-print"></i> 웹 페이지 인쇄</button>
+      </div>
+    </div>
+
+    <!-- 활동 생성 섹션 -->
+    <div id="activity" class="section" style="display:none;">
+      <h2><i class="fas fa-chalkboard-teacher"></i> 활동 생성</h2>
+      <p>생성할 활동을 선택하세요:</p>
+      <div style="margin-bottom: 15px;">
+        <label><input type="checkbox" class="activity-type" value="단어 및 주요 표현 익히기"> 단어 및 주요 표현 익히기</label><br/>
+        <label><input type="checkbox" class="activity-type" value="영어 문장 해석하기"> 영어 문장 해석하기</label><br/>
+        <label><input type="checkbox" class="activity-type" value="빈 칸 채우기"> 빈 칸 채우기</label><br/>
+        <label><input type="checkbox" class="activity-type" value="우리말 영어로 번역하기"> 우리말 영어로 번역하기</label><br/>
+        <label><input type="checkbox" class="activity-type" value="문법 변형 활동"> 문법 변형 활동</label><br/>
+      </div>
+      <button onclick="generateActivity()"><i class="fas fa-play"></i> 활동 생성</button>
+      <div id="activity-loading-indicator">활동 생성 중... <i class="fas fa-hourglass-half"></i></div>
+    </div>
+
+    <!-- 활동 확인 섹션 -->
+    <div id="activityCheck" class="section" style="display:none;">
+      <h2><i class="fas fa-check-square"></i> 활동 확인</h2>
+      <div id="activityOutputView"></div>
+    </div>
+  </div>
+</body>
+</html>
