--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       <button onclick="generateQuestion()">
         <i class="fas fa-check"></i> 선택 완료
       </button>
-      <div id="loading-indicator">문제 생성 중... <i class="fas fa-hourglass-half"></i></div>
+      <div id="loading-indicator">문제 생성 중... <i class="fas fa-spinner fa-spin"></i></div>
     </div>
     
     <!-- 문제 확인 섹션 -->
