--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
   </div>
 
   <script>
-    const WORKER_GENERATE_URL = "https://readingquiz.sehyunglee2015.workers.dev/api/generate";
-  //  const WORKER_GENERATE_URL = "https://reading-worker.sehyunglee2015.workers.dev/api/generate";
+  //  const WORKER_GENERATE_URL = "https://readingquiz.sehyunglee2015.workers.dev/api/generate";
+    const WORKER_GENERATE_URL = "https://reading-worker.sehyunglee2015.workers.dev/api/generate";
   
     // 마지막 요청 시각 (중복 요청 방지용)
     let lastRequestTime = 0;
