--- a/index.html
+++ b/index.html
@@ -207,12 +207,14 @@
       <!-- 유형 선택 (가로 배치) -->
       <h3>✅ 문제 유형 선택</h3>
       <div style="margin-bottom: 10px;">
-        <label><input type="checkbox" class="problem-type" value="주제 및 목적 파악" /> 주제 및 목적 파악</label>
-        <label><input type="checkbox" class="problem-type" value="세부 내용 이해" /> 세부 내용 이해</label>
-        <label><input type="checkbox" class="problem-type" value="논리적 관계 파악" /> 논리적 관계 파악</label>
-        <label><input type="checkbox" class="problem-type" value="어휘 추론" /> 어휘 추론</label>
-        <label><input type="checkbox" class="problem-type" value="빈칸 추론" /> 빈칸 추론</label>
-        <label><input type="checkbox" class="problem-type" value="글의 순서 파악" /> 글의 순서 파악</label>
+        <label><input type="checkbox" class="problem-type" value="주제 및 목적 파악" /> 주제 및 목적 파악 </label>
+        <label><input type="checkbox" class="problem-type" value="세부 내용 이해" /> 세부 내용 이해 </label>
+        <label><input type="checkbox" class="problem-type" value="논리적 관계 파악" /> 논리적 관계 파악 </label>
+        <label><input type="checkbox" class="problem-type" value="어휘 추론" /> 어휘 추론 </label>
+        <label><input type="checkbox" class="problem-type" value="빈 칸 추론" /> 빈 칸 추론 </label>
+        <label><input type="checkbox" class="problem-type" value="글의 순서 파악" /> 글의 순서 파악 </label>
+        <label><input type="checkbox" class="problem-type" value="문장 삽입" /> 문장 삽입 </label>
+        <label><input type="checkbox" class="problem-type" value="함축적 의미 추론" /> 함축적 의미 추론 </label>
         <label><input type="checkbox" class="problem-type" value="어법" /> 어법</label>
       </div>
 
